--- a/RadonData.ipynb
+++ b/RadonData.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b93c33c8",
+   "id": "7fbcd666",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "31ec96ab",
+   "id": "c7a3f802",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "033cfb3d",
+   "id": "693c40bc",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "55379a94",
+   "id": "9a51a22a",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e25f9a1a",
+   "id": "16d49293",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b6f393f9",
+   "id": "b8b71a06",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "09adfe2b",
+   "id": "ddb29352",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "764f837a",
+   "id": "563dafc3",
    "metadata": {},
    "outputs": [
     {
@@ -372,17 +372,27 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "11691fc9",
+   "id": "922db1b4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "radon = gpd.read_file('data_files/RadonNI.shp') # load the Counties shapefile"
+    "#radon_table.to_file('RadonNI.shp')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "40598c82",
+   "id": "c3b2c0db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "radon = gpd.read_file('data_files/RadonNI.shp') # load the radon shapefile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c7564a08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,8 +401,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "573688f6",
+   "execution_count": 12,
+   "id": "72087781",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +411,7 @@
        "Index(['COUNTY_ID', 'CountyName', 'Area_SqKM', 'OBJECTID', 'geometry'], dtype='object')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,8 +422,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "2a8e3f23",
+   "execution_count": 13,
+   "id": "3e69e2e6",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +515,7 @@
        "4  POLYGON ((-6.66919 55.19899, -6.66918 55.19893...  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,8 +526,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "2b820bd2",
+   "execution_count": 14,
+   "id": "ed45f876",
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +619,7 @@
        "4  POLYGON ((-6.66919 55.19899, -6.66918 55.19893...  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,8 +630,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "92298fa7",
+   "execution_count": 15,
+   "id": "73a8e8dc",
    "metadata": {},
    "outputs": [
     {
@@ -639,8 +649,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "fb3542fa",
+   "execution_count": 16,
+   "id": "e8f65abd",
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +659,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -672,8 +682,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "c101c282",
+   "execution_count": 17,
+   "id": "3174efa5",
    "metadata": {},
    "outputs": [
     {
@@ -706,8 +716,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "1a904744",
+   "execution_count": 18,
+   "id": "45414df0",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +739,7 @@
        "- Prime Meridian: Greenwich"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,8 +750,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "b3187aba",
+   "execution_count": 19,
+   "id": "03a49d6a",
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +770,7 @@
        "- Prime Meridian: Greenwich"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,8 +781,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "961230c6",
+   "execution_count": 20,
+   "id": "a099aca9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,8 +791,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "f6e759af",
+   "execution_count": 21,
+   "id": "4280b364",
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77235027",
+   "id": "df6b93af",
    "metadata": {},
    "source": [
     "# Note the difference in the X, Y values above."
@@ -823,8 +833,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "e412437d",
+   "execution_count": 22,
+   "id": "1e20c64c",
    "metadata": {},
    "outputs": [
     {
@@ -841,8 +851,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "090e5107",
+   "execution_count": 23,
+   "id": "3a3de7da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,8 +861,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "6bdbe8e6",
+   "execution_count": 24,
+   "id": "ac71ab57",
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1102,7 @@
        "[13855 rows x 11 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1103,8 +1113,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "cef1f456",
+   "execution_count": 25,
+   "id": "7f8e28d6",
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1123,7 @@
        "(13855, 11)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,8 +1134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "656f3e07",
+   "execution_count": 26,
+   "id": "d744b7b3",
    "metadata": {},
    "outputs": [
     {
@@ -1159,8 +1169,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "id": "7451f76c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#radon_counties.to_file('radon_counties.shp')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1abb4aab",
+   "id": "282acbe7",
    "metadata": {},
    "outputs": [],
    "source": []
