--- a/NI_DTM.ipynb
+++ b/NI_DTM.ipynb
@@ -81,7 +81,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BoundingBox(left=188566.0642, bottom=309840.3799, right=366516.0642, top=453190.3799)\n"
+      "BoundingBox(left=188566.06416642142, bottom=309840.37988014915, right=366516.0641664214, top=453190.37988014915)\n"
      ]
     }
    ],
@@ -1222,7 +1222,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2514a0d8a90>"
+       "<matplotlib.image.AxesImage at 0x27f1e3afa90>"
       ]
      },
      "execution_count": 13,
@@ -1243,7 +1243,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2514a0f1910>"
+       "<matplotlib.image.AxesImage at 0x27f1e3af550>"
       ]
      },
      "execution_count": 14,
@@ -1264,7 +1264,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2514a0f1790>"
+       "<matplotlib.image.AxesImage at 0x27f1e3c8400>"
       ]
      },
      "execution_count": 15,
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "6602582f",
    "metadata": {},
    "outputs": [],
