--- a/NI_DTM.ipynb
+++ b/NI_DTM.ipynb
@@ -55,15 +55,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data_files/ni_dtm.tif opened in r mode\n",
+      "data_files/LCM2015_Aggregate_100m.tif opened in r mode\n",
       "image has 1 band(s)\n",
-      "image size (width, height): 3559 x 2867\n",
-      "band 1 dataype is int16\n"
+      "image size (width, height): 1922 x 1627\n",
+      "band 1 dataype is uint8\n"
      ]
     }
    ],
    "source": [
-    "dem = rio.open('data_files/ni_dtm.tif')\n",
+    "dem = rio.open('data_files/LCM2015_Aggregate_100m.tif')\n",
     "\n",
     "print('{} opened in {} mode'.format(dem.name,dem.mode))\n",
     "print('image has {} band(s)'.format(dem.count))\n",
@@ -81,7 +81,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BoundingBox(left=188566.06416642142, bottom=309840.37988014915, right=366516.0641664214, top=453190.37988014915)\n"
+      "BoundingBox(left=543312.9051, bottom=5978021.1632, right=735512.9051, top=6140721.1632)\n"
      ]
     }
    ],
@@ -99,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EPSG:29902\n"
+      "EPSG:32629\n"
      ]
     }
    ],
@@ -147,8 +147,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 2867, 3559)\n",
-      "1271\n"
+      "(1, 1627, 1922)\n",
+      "4\n"
      ]
     }
    ],
@@ -167,7 +167,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1433, 1779)\n",
+      "(813, 961)\n",
       "True\n"
      ]
     }
@@ -1222,7 +1222,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x17b874e0bb0>"
+       "<matplotlib.image.AxesImage at 0x1d88d18ddc0>"
       ]
      },
      "execution_count": 13,
@@ -1243,7 +1243,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x17b874e0610>"
+       "<matplotlib.image.AxesImage at 0x1d88d197e20>"
       ]
      },
      "execution_count": 14,
@@ -1264,7 +1264,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x17b874f9400>"
+       "<matplotlib.image.AxesImage at 0x1d88d1ae5b0>"
       ]
      },
      "execution_count": 15,
