--- a/NI_DTM.ipynb
+++ b/NI_DTM.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "08e8d5ea",
    "metadata": {},
    "outputs": [
@@ -55,15 +55,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data_files/LCM2015_Aggregate_100m.tif opened in r mode\n",
+      "data_files/ni_dtm.tif opened in r mode\n",
       "image has 1 band(s)\n",
-      "image size (width, height): 1922 x 1627\n",
-      "band 1 dataype is uint8\n"
+      "image size (width, height): 3559 x 2867\n",
+      "band 1 dataype is int16\n"
      ]
     }
    ],
    "source": [
-    "dem = rio.open('data_files/LCM2015_Aggregate_100m.tif')\n",
+    "dtm = rio.open('data_files/ni_dtm.tif')\n",
     "\n",
     "print('{} opened in {} mode'.format(dem.name,dem.mode))\n",
     "print('image has {} band(s)'.format(dem.count))\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "8ce7bce1",
    "metadata": {},
    "outputs": [
@@ -81,17 +81,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BoundingBox(left=543312.9051, bottom=5978021.1632, right=735512.9051, top=6140721.1632)\n"
+      "BoundingBox(left=188566.06416642142, bottom=309840.37988014915, right=366516.0641664214, top=453190.37988014915)\n"
      ]
     }
    ],
    "source": [
-    "print(dem.bounds)"
+    "print(dtm.bounds)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "b802aaf0",
    "metadata": {},
    "outputs": [
@@ -99,17 +99,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EPSG:32629\n"
+      "EPSG:29902\n"
      ]
     }
    ],
    "source": [
-    "print(dem.crs)"
+    "print(dtm.crs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "46236b44",
    "metadata": {},
    "outputs": [
@@ -123,23 +123,23 @@
     }
    ],
    "source": [
-    "num_bands = dem.count\n",
+    "num_bands = dtm.count\n",
     "print('Number of bands in image: {n}\\n'.format(n=num_bands))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "5de4ab5b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = dem.read()"
+    "img = dtm.read()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "8f820fba",
    "metadata": {},
    "outputs": [
@@ -147,8 +147,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 1627, 1922)\n",
-      "4\n"
+      "(1, 2867, 3559)\n",
+      "1271\n"
      ]
     }
    ],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "ada9fb03",
    "metadata": {},
    "outputs": [
@@ -167,42 +167,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(813, 961)\n",
+      "(1433, 1779)\n",
       "True\n"
      ]
     }
    ],
    "source": [
-    "centeri, centerj = dem.height // 2, dem.width // 2 # note that centeri corresponds to the row, and centerj the column\n",
-    "centerx, centery = dem.transform * (centerj, centeri) # note the reversal here, from i,j to j,i\n",
-    "print(dem.index(centerx, centery))\n",
-    "print((centeri, centerj) == dem.index(centerx, centery)) # check that these are the same"
+    "centeri, centerj = dtm.height // 2, dem.width // 2 # note that centeri corresponds to the row, and centerj the column\n",
+    "centerx, centery = dtm.transform * (centerj, centeri) # note the reversal here, from i,j to j,i\n",
+    "print(dtm.index(centerx, centery))\n",
+    "print((centeri, centerj) == dtm.index(centerx, centery)) # check that these are the same"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "1e9625b4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "top, lft = dem.index(centerx-500, centery+500)\n",
-    "bot, rgt = dem.index(centerx+500, centery-500)\n",
+    "top, lft = dtm.index(centerx-500, centery+500)\n",
+    "bot, rgt = dtm.index(centerx+500, centery-500)\n",
     "\n",
-    "subset = dem.read(window=((top, bot), (lft, rgt))) # format is (top, bottom), (left, right)\n",
+    "subset = dtm.read(window=((top, bot), (lft, rgt))) # format is (top, bottom), (left, right)\n",
     "\n",
-    "dem.close() # remember to close the dem now that we're done with it."
+    "dtm.close() # remember to close the dem now that we're done with it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "ed2a1778",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'bounds'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-21-d5375df674c8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mrio\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'data_files/ni_dtm.tif'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mdtm\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mimg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdtm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mxmin\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mymin\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mxmax\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mymax\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdem\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbounds\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'bounds'"
+     ]
+    }
+   ],
    "source": [
-    "with rio.open('data_files/ni_dtm.tif') as dem:\n",
-    "    img = dem.read()\n",
+    "with rio.open('data_files/ni_dtm.tif') as dtm:\n",
+    "    img = dtm.read()\n",
     "    xmin, ymin, xmax, ymax = dem.bounds "
    ]
   },
@@ -1215,40 +1227,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "e5358083",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1d88d18ddc0>"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'ax' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-15-9716d3f98807>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0max\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcmap\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'gray'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvmin\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m200\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvmax\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m200\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'ax' is not defined"
+     ]
     }
    ],
    "source": [
-    "ax.imshow(img[0], cmap='gray', vmin=200, vmax=5000)"
+    "ax.imshow(img[0], cmap='gray', vmin=200, vmax=200)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "5f049d8b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1d88d197e20>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'ax' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-16-0a008e15fb2c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0max\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcmap\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'gray'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvmin\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m200\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvmax\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m5000\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtransform\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmyCRS\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mextent\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mxmin\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mxmax\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mymin\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mymax\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'ax' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1257,19 +1271,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "abc4426e",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1d88d1ae5b0>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'ax' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-9e2edd7f9681>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0max\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtransform\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmyCRS\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mextent\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mxmin\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mxmax\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mymin\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mymax\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'ax' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1278,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "6602582f",
    "metadata": {},
    "outputs": [],
@@ -1289,35 +1304,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "2007bcc0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 0, ..., 0, 0, 0],\n",
-       "       ...,\n",
-       "       [0, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 0, ..., 0, 0, 0]], dtype=int16)"
+       "<closed DatasetReader name='data_files/ni_dtm.tif' mode='r'>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dem"
+    "dtm"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b234c48d",
+   "id": "f7cf6eff",
    "metadata": {},
    "outputs": [],
    "source": []
